--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
-Khlifa Elbad <khlifaelbad@gmail.com>
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Khlifa elbad <khlifaelbad@gmail.com>
+Jennifer huang <133@holbertonschool.com>
+Alexa orrico <210@holbertonschool.com>
+Joann vuong <130@holbertonschool.com> 
